Add delete workout session
